--- a/src/Carousel.css
+++ b/src/Carousel.css
@@ -1,4 +1,26 @@
 .carousel img {
-  width: auto;
-  height: 100vw;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  top: 0px;
+  opacity: 1;
+  filter: grayscale(75%);
+  max-width: 80%;
+  height: auto;
+}
+
+.overlay {
+  position:absolute;
+  top:0;
+  bottom: auto;
+  left:0;
+  right:0;
+  height: 100%;
+  opacity: .2;
+  transition: .7s ease;
+  background-color: #ddcf9d;
+}
+
+.carousel:hover .overlay {
+  opacity: .5;
 }
