--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,21 @@
   font-size: large;
 }
 
+.blurb {
+  max-width: 60%;
+  display: flex;
+  justify-content: center;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+h1 {
+font-family: 'Permanent Marker', cursive;
+  }
+
+p {
+  font-family: 'Playfair Display', serif;
+  }
