--- a/src/Carousel.css
+++ b/src/Carousel.css
@@ -1,8 +1,7 @@
-.carousel img {
+.home-carousel img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  top: 0px;
   opacity: 1;
   filter: grayscale(75%);
   width: 75vw;
@@ -10,6 +9,6 @@
   height: auto;
 }
 
-.slick-list *:focus {
+.slick-slider *:focus {
   outline: none;
 }
