--- a/src/ContactForm.css
+++ b/src/ContactForm.css
@@ -1,15 +1,20 @@
+.form-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 
 .form-style-2{
-    max-width: 500px;
+    max-width: 55vw;
     padding: 20px 12px 10px 20px;
-    font: 13px 'Playfair Display', Helvetica, sans-serif;
+    font: 14px 'Playfair Display', Helvetica, sans-serif;
 }
 .form-style-2-heading{
     font-weight: bold;
     font-style: italic;
     border-bottom: 2px solid #ddd;
     margin-bottom: 20px;
-    font-size: 15px;
+    font-size: 18px;
     padding-bottom: 3px;
 }
 .form-style-2 label{
@@ -38,23 +43,18 @@
 .form-style-2 .textarea-field,
  .form-style-2 .select-field{
     box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     border: 1px solid #C2C2C2;
     box-shadow: 1px 1px 4px #EBEBEB;
-    -moz-box-shadow: 1px 1px 4px #EBEBEB;
-    -webkit-box-shadow: 1px 1px 4px #EBEBEB;
     border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
     padding: 7px;
     outline: none;
+
 }
 .form-style-2 .input-field:focus,
 .form-style-2 .tel-number-field:focus,
 .form-style-2 .textarea-field:focus,
 .form-style-2 .select-field:focus{
-    border: 1px solid #0C0;
+    border: 1px solid #000;
 }
 .form-style-2 .textarea-field{
     height:100px;
@@ -64,7 +64,7 @@
 .form-style-2 input[type=button]{
     border: none;
     padding: 8px 15px 8px 15px;
-    background: #FF8500;
+    background: ##7c7a7a;
     color: #fff;
     box-shadow: 1px 1px 4px #DADADA;
     -moz-box-shadow: 1px 1px 4px #DADADA;
@@ -72,9 +72,20 @@
     border-radius: 3px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
+
 }
 .form-style-2 input[type=submit]:hover,
 .form-style-2 input[type=button]:hover{
-    background: #EA7B00;
+    background: #444444;
     color: #fff;
+}
+
+.select-field {
+  font-family: 'Roboto';
+  font-size: 14px;
+}
+
+.wider {
+  width: 40vw;
+  border: 10px solid red;
 }
