--- a/src/About.css
+++ b/src/About.css
@@ -1,18 +1,27 @@
-.about-tile {
+.about-tiles {
   position: absolute;
   width: 45vw;
   left: 25vw;
   background-color: #eeeeee;
+  border-radius: 2px;
+  box-shadow: 2px 2px 12px 1px #bbbbbb;
 }
 
-
 .about-img-div {
-  height: 100px;
-  width: 100px;
+  height: 200px;
+  width: 200px;
   position: relative;
   overflow: hidden;
-  
   border-radius: 50%;
+}
+
+.about-img-div {
+  margin-left: 5%;
+  margin-top: 10%;
+}
+
+.about-tiles ul {
+  margin-top: 11.5vh;
 }
 
 .about-img-div img{
@@ -23,11 +32,13 @@
   width: auto;
 }
 
-.about-tile ul{
+.about-tiles ul{
+  height: 20%;
+  width: 50%;
   padding-left: none;
 }
 
-.about-tile li{
+.about-tiles li{
   list-style: none;
 }
 
@@ -36,13 +47,17 @@
   flex-direction: row;
 }
 
-.about-jacob li{
-  padding-left: 10vw;
-}
 
 .about-moran {
   display: flex;
   flex-direction: row;
+  padding-right: 30px;
+  background-color: #dddddd;
+}
+
+.about-moran ul {
+  padding-left: 0;
+  padding-right: 5px;
 }
 
 .about-ferkin {
@@ -50,7 +65,23 @@
   flex-direction: row;
 }
 
-.about-ferkin li{
-  padding-left: 10vw;
+.about-ferkin img {
+  margin-left: -6%;
 }
 
+.about-page-border-1 {
+  height: 4px;
+  width: 100%;
+  background: linear-gradient(to left, #ddd , #bbb);
+}
+
+.about-page-border-2 {
+  height:4px;
+  width: 100%;
+  background: linear-gradient(to right, #ddd , #bbb);
+}
+
+.about-tile {
+  padding-bottom: 8%;
+  padding-left: 3%;
+}
