--- a/src/Carousel.css
+++ b/src/Carousel.css
@@ -1,4 +1,3 @@
-
 .home-carousel img {
   display: block;
   margin-left: auto;
@@ -8,8 +7,9 @@
   width: 75vw;
   max-width: 80%;
   height: auto;
-  box-shadow: 1px 1px 12px 0 #bbbbbb;
+  box-shadow: 1px 1px 15px 0 #bbbbbb;
   border-radius: 1px;
+  border: 1px solid #dddddd
 }
 
 .slick-slider *:focus {
