--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@
   to { transform: rotate(360deg); }
 }
 
+
 h1 {
   font-family: 'Permanent Marker', cursive;
 }
@@ -51,6 +52,7 @@ nav {
   display: flex;
   flex-direction: row;
   position: sticky;
+  margin-bottom: 1.5%; 
 }
 
 
