--- a/src/Carousel.css
+++ b/src/Carousel.css
@@ -7,8 +7,26 @@
   width: 75vw;
   max-width: 80%;
   height: auto;
+  box-shadow: 1px 1px 15px 0 #bbbbbb;
+  border-radius: 1px;
+  border: 1px solid #dddddd
 }
 
 .slick-slider *:focus {
   outline: none;
+}
+
+.about-jacob {
+  display: flex;
+  flex-direction: row;
+}
+
+.about-moran {
+  display: flex;
+  flex-direction: row;
+}
+
+.about-ferkin {
+  display: flex;
+  flex-direction: row;
 }
