set a redirect route

--- a/src/About.css
+++ b/src/About.css
@@ -5,6 +5,7 @@
   background-color: #eeeeee;
   border-radius: 2px;
   box-shadow: 2px 2px 12px 1px #bbbbbb;
+  margin-bottom: 2%;
 }
 
 .about-img-div {
