--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,11 @@
 .App {
   text-align: center;
+  background-color:#F3F7F0;
 }
 
 .App h1 {
   margin-top: 35px;
   font-size: 2.8em;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
 }
 
 .App-title {
@@ -22,59 +16,46 @@
   font-size: large;
 }
 
-.blurb {
-  width: 60vw;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding-left: 20vw;
-}
-
-.company-blurb {
-  width: 55vw;
-  left: 0;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
 
 h1 {
-  font-family: 'Permanent Marker', cursive;
+  font-family: 'Kosugi Maru', regular;
 }
 
 nav {
   height: 50px;
-  width: 90vw;
+  width: 75vw;
   display: flex;
   flex-direction: row;
   position: sticky;
-  margin-bottom: 1.5%; 
+  margin-bottom: 1.5%;
+  margin-left: 12vw;
+  border-bottom: 3px solid #dddddd;
+  color: #C3C3E6;
 }
 
+nav a div {
+  width: 10vw;
+
+}
 
 .logo {
-  padding-left: 11vw;
-  padding-right: 51vw;
-  width: 80px;
-  font-family: 'Permanent Marker';
+  margin-left: -1.5vw;
+  padding-right: 38vw;
+  width: 150px;
+  font-family: 'Kosugi Maru', regular;
   font-size: 30px;
   opacity: 1;
 }
 
 .logo:hover{
-  color: #871429;
+  text-shadow: 2px 2px 3px #dddddd;
 }
 
 nav a{
-  padding: 20px 8.5px 20px 15px;
+  padding: 20px 0 20px 0;
   line-height: 25px;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Anaheim', regular;
   font-size: 20px;
-  opacity: 0.6;
   text-decoration: none;
 }
 
@@ -87,7 +68,7 @@ nav a:hover {
 }
 
 nav a:visited {
-  color: rgb(85, 26, 139)  
+  color: #13505B;  
 }
 
 
