--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,14 @@
   background-color:#F3F7F0;
 }
 
+body {
+  background-color: #f3f7f0
+}
+
+.page {
+  background-color: #f3f7f0
+}
+
 .App h1 {
   margin-top: 35px;
   font-size: 2.8em;
@@ -40,7 +48,7 @@ nav a div {
 
 .logo {
   margin-left: -1.5vw;
-  padding-right: 38vw;
+  padding-right: 37vw;
   width: 150px;
   font-family: 'Kosugi Maru', regular;
   font-size: 30px;
