--- a/src/ContactForm.css
+++ b/src/ContactForm.css
@@ -3,21 +3,19 @@
   flex-direction: column;
 }
 .form-container {
-  width: 90vw;
+  width: 76vw;
   display: flex;
   flex-flow: row wrap;
   font-family: 'Lato', sans-serif;
-  background: #e2dedb;
+  background-color: #eeeeee;
   color: #b3aca7;
   margin: 0 auto;
   border-radius: 2px;
   box-shadow: 2px 2px 12px 1px #bbbbbb;
-
 }
 
 .form-header {
-
-  width: 85vw;
+  width: 71vw;
   margin: 0 auto;
   margin-bottom: 40px;
   letter-spacing: 7px;
@@ -25,87 +23,7 @@
   font-weight: 400;
 }
 
-/* CSS for MINIMALISTIC form */
-
-input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
-  color: #aca49c;
-  font-size: 0.875em;
-}
-
-input:focus::-webkit-input-placeholder, textarea:focus::-webkit-input-placeholder {
-  color: #bbb5af;
-}
-
-input::-moz-placeholder, textarea::-moz-placeholder {
-  color: #aca49c;
-  font-size: 0.875em;
-}
-
-input:focus::-moz-placeholder, textarea:focus::-moz-placeholder {
-  color: #bbb5af;
-}
-
-input::placeholder, textarea::placeholder {
-  color: #aca49c;
-  font-size: 0.875em;
-}
-
-input:focus::placeholder, textarea::focus:placeholder {
-  color: #bbb5af;
-}
-
-input::-ms-placeholder, textarea::-ms-placeholder {
-  color: #aca49c;
-  font-size: 0.875em;
-}
-
-input:focus::-ms-placeholder, textarea:focus::-ms-placeholder {
-  color: #bbb5af;
-}
-
-/* on hover placeholder */
-
-input:hover::-webkit-input-placeholder, textarea:hover::-webkit-input-placeholder {
-  color: #e2dedb;
-  font-size: 0.875em;
-}
-
-input:hover:focus::-webkit-input-placeholder, textarea:hover:focus::-webkit-input-placeholder {
-  color: #cbc6c1;
-}
-
-input:hover::-moz-placeholder, textarea:hover::-moz-placeholder {
-  color: #e2dedb;
-  font-size: 0.875em;
-}
-
-input:hover:focus::-moz-placeholder, textarea:hover:focus::-moz-placeholder {
-  color: #cbc6c1;
-}
-
-input:hover::placeholder, textarea:hover::placeholder {
-  color: #e2dedb;
-  font-size: 0.875em;
-}
-
-input:hover:focus::placeholder, textarea:hover:focus::placeholder {
-  color: #cbc6c1;
-}
-
-input:hover::placeholder, textarea:hover::placeholder {
-  color: #e2dedb;
-  font-size: 0.875em;
-}
-
-input:hover:focus::-ms-placeholder, textarea:hover::focus:-ms-placeholder {
-  color: #cbc6c1;
-}
-
-
-
-
 #form {
-
   width: 500px;
   margin: 50px auto 100px auto;
 }
@@ -116,20 +34,17 @@ input {
   width: 470px;
   height: 50px;
   padding: 0px 15px 0px 15px;
-
   background: transparent;
   outline: none;
   color: #726659;
-
-  border: solid 1px #b3aca7;
+  border: solid 1px #13505B;
   border-bottom: none;
-
   transition: all 0.3s ease-in-out;
 
 }
 
 input:hover {
-  background: #b3aca7;
+  background: #dddddd;
   color: #e2dedb;
 }
 
@@ -139,146 +54,45 @@ textarea {
   height: 110px;
   max-height: 110px;
   padding: 15px;
-
   background: transparent;
   outline: none;
-
   color: #726659;
   font-family: 'Lato', sans-serif;
   font-size: 0.875em;
-
-  border: solid 1px #b3aca7;
-
+  border: solid 1px #13505B;
   transition: all 0.3s ease-in-out;
-
 }
 
 textarea:hover {
-  background: #b3aca7;
+  background: #dddddd;
   color: #e2dedb;
 }
 
 #submit {
   width: 502px;
-
   padding: 0;
   margin: -5px 0px 0px 0px;
-
   font-family: 'Lato', sans-serif;
   font-size: 0.875em;
   color: #b3aca7;
-
   outline:none;
   cursor: pointer;
-
-  border: solid 1px #b3aca7;
+  border: solid 1px #13505B;
   border-top: none;
 }
 
 #submit:hover {
   color: #e2dedb;
-}
-
-/* CSS for original form */
-
-.form-style-2{
-    max-width: 55vw;
-    padding: 20px 12px 10px 20px;
-    font: 16px 'Anaheim', regular;
-    color: #13505B;
-}
-.form-style-2-heading{
-    font-weight: bold;
-    margin-bottom: 20px;
-    font-size: 18px;
-    padding-bottom: 3px;
-}
-.form-style-2 label{
-    display: block;
-    margin: 0px 0px 15px 0px;
-}
-.form-style-2 label > span{
-    width: 100px;
-    font-weight: bold;
-    float: left;
-    padding-top: 8px;
-    padding-right: 5px;
-    color: #13505B;
-}
-.form-style-2 span.required{
-    color:#A93F55;
-}
-.form-style-2 .tel-number-field{
-    width: 55px;
-    text-align: center;
-}
-.form-style-2 input.input-field, .form-style-2 .select-field{
-    width: 48%;
-}
-.form-style-2 input.input-field,
-.form-style-2 .tel-number-field,
-.form-style-2 .textarea-field,
- .form-style-2 .select-field{
-    box-sizing: border-box;
-    border: 1px solid #C2C2C2;
-    box-shadow: 1px 1px 4px #EBEBEB;
-    border-radius: 3px;
-    padding: 7px;
-    outline: none;
-
-}
-.form-style-2 .input-field:focus,
-.form-style-2 .tel-number-field:focus,
-.form-style-2 .textarea-field:focus,
-.form-style-2 .select-field:focus{
-    border: 1px solid #000;
-}
-.form-style-2 .textarea-field{
-    height:100px;
-    width: 55%;
-}
-.form-style-2 input[type=submit],
-.form-style-2 input[type=button]{
-    border: none;
-    padding: 8px 15px 8px 15px;
-    background: ##7c7a7a;
-    color: #fff;
-    box-shadow: 1px 1px 4px #DADADA;
-    -moz-box-shadow: 1px 1px 4px #DADADA;
-    -webkit-box-shadow: 1px 1px 4px #DADADA;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    cursor:pointer;
-
-}
-.form-style-2 input[type=submit]:hover,
-.form-style-2 input[type=button]:hover{
-    background: #444444;
-    color: #fff;
-}
-
-.select-field {
-  font-family: 'Roboto';
-  font-size: 14px;
-}
-
-.wider {
-  width: 40vw;
-  border: 10px solid red;
+  border-top: solid 1px #13505B;
 }
 
 .emailRetry {
-
   color:#A93F55 ;
   font-weight: 600;
   margin: 0 auto;
-  width: 90vw;
+  width: 76vw;
   height: 50px;
-  padding: 0px 15px 0px 15px;
-
   background: transparent;
   outline: none;
   transition: all 0.3s ease-in-out;
-
 }
