--- a/src/ContactForm.css
+++ b/src/ContactForm.css
@@ -72,14 +72,14 @@ textarea:hover {
 #submit {
   width: 502px;
   padding: 0;
-  margin: -5px 0px 0px 0px;
+  margin: 16px 0px 0px 0px;
   font-family: 'Lato', sans-serif;
   font-size: 0.875em;
-  color: #b3aca7;
+  background-color: #ddd;
   outline:none;
   cursor: pointer;
   border: solid 1px #13505B;
-  border-top: none;
+  box-shadow: 2px 2px 6px 1px #bbbbbb;
 }
 
 #submit:hover {
