--- a/src/ContactForm.css
+++ b/src/ContactForm.css
@@ -18,7 +18,7 @@
   width: 71vw;
   margin: 0 auto;
   margin-bottom: 40px;
-  letter-spacing: 7px;
+  letter-spacing: 5px;
   font-family: 'Lato', sans-serif;
   font-weight: 400;
 }
@@ -75,17 +75,20 @@ textarea:hover {
   margin: 16px 0px 0px 0px;
   font-family: 'Lato', sans-serif;
   font-size: 0.875em;
-  background-color: #ddd;
+  background-color: #C3C3E6;
   outline:none;
   cursor: pointer;
   border: solid 1px #13505B;
   box-shadow: 2px 2px 6px 1px #bbbbbb;
+
 }
 
 #submit:hover {
   color: #13505B;
   border-top: solid 1px #13505B;
+  background-color: #B2B2D2;
 }
+
 
 .emailInvalid {
   height: 0;
