--- a/src/Issues.css
+++ b/src/Issues.css
@@ -33,6 +33,10 @@
   width: auto;
 }
 
+.about-tiles h2 {
+  color: #13505B;
+}
+
 .about-tiles ul{
   height: 20%;
   width: 50%;
@@ -41,6 +45,7 @@
 
 .about-tiles li{
   list-style: none;
+  color: #688F96;
 }
 
 .about-jacob {
