--- a/src/Home.css
+++ b/src/Home.css
@@ -5,7 +5,7 @@
   background-color: #eeeeee;
   border-radius: 2px;
   box-shadow: 2px 2px 12px 1px #bbbbbb;
-  margin-bottom: 2%;  
+  margin-bottom: 2%;
 }
 
 .home-jacob {
@@ -29,7 +29,7 @@
 .home-moran img{
   width:auto;
   height: 15vh;
-  padding: 3vh 0; 
+  padding: 3vh 0;
 }
 
 
@@ -98,4 +98,21 @@
 
 .home-tile-text h2{
 margin-left: -1.2vw;
+}
+
+.foot {
+  margin top: 20px;
+}
+
+.credits {
+  display: flex;
+  justify-content: flex-start;
+  align-self: flex-end;
+  font-size: 12px;
+  padding-left: 20px;
+  color: #C3C3E6;
+}
+
+.logo {
+   height: 14px;
 }
