--- a/src/ContactForm.css
+++ b/src/ContactForm.css
@@ -111,3 +111,10 @@ textarea:hover {
   left: 17.1vw;
   top: .5vh;
 }
+
+.contact-email-div img{
+  position: absolute;
+  height: 5vh;
+  left: 64.8vw;
+  top: 48vh;
+}
