--- a/src/Home.css
+++ b/src/Home.css
@@ -6,84 +6,54 @@
   border-radius: 2px;
   box-shadow: 2px 2px 12px 1px #bbbbbb;
   margin-bottom: 2px;
-
-}
-
-.home-jacob {
-  display: flex;
-  justify-content: center;
-}
-
-.home-jacob h1{
-  font-weight: 500;
-  text-shadow: 3px 3px 5px #bbbbbb;
-
-}
-
-.home-moran{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: baseline;
-}
-
-.home-moran img{
-  width:auto;
-  height: 15vh;
-  padding: 3vh 0;
-}
-
-
-.home-ferkin {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: baseline;
-  padding-left: 2vw;
-}
-
-.home-ferkin img{
-  width:auto;
-  height: 10vh;
-  padding: 6vh 0;
-}
-
-.home-jacob {
-  display: flex;
-  flex-direction: row;
-}
-
-
-.home-moran {
-  display: flex;
-  flex-direction: row;
-  background-color: #dddddd;
-}
-
-.home-ferkin {
-  display: flex;
-  flex-direction: row;
-}
-
-.home-ferkin img {
-  margin-left: -6%;
-}
-
-.home-page-border-1 {
-  height: 4px;
-  width: 100%;
-  background: linear-gradient(to left, #ddd , #bbb);
-}
-
-.home-page-border-2 {
-  height:4px;
-  width: 100%;
-  background: linear-gradient(to right, #ddd , #bbb);
 }
 
 .home-tile {
   width: 100%;
 }
+
+.home-tile-first {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.home-tile-first h1{
+  font-weight: 500;
+  text-shadow: 3px 3px 5px #bbbbbb;
+}
+
+.home-tile-second {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: baseline;
+  background-color: #dddddd;
+}
+
+.home-tile-second img{
+  width:auto;
+  height: 15vh;
+  padding: 3vh 0;
+}
+
+.home-logo-row {
+  justify-content: space-around;
+  align-items: baseline;
+  padding-left: 2vw;
+}
+
+.home-logo-row img{
+  width: auto;
+  height: 10vh;
+  padding: 6vh 0;
+}
+
+
+.home-logo-row img {
+  margin-left: -6%;
+}
+
 
 .home-h1-covered {
   color: rgb(19, 80, 91)
@@ -98,7 +68,7 @@
 }
 
 .home-tile-text h2{
-margin-left: -1.2vw;
+  margin-left: -1.2vw;
 }
 
 .foot {
@@ -106,7 +76,7 @@ margin-left: -1.2vw;
   position: absolute;
   bottom: 0;
   display: flex;
-  flex direction: row;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
@@ -117,6 +87,14 @@ margin-left: -1.2vw;
   color: #C3C3E6;
 }
 
-.logo {
+.home-page-border-1 {
+  height: 4px;
+  width: 100%;
+  background: linear-gradient(to left, #ddd , #bbb);
+}
 
+.home-page-border-2 {
+  height:4px;
+  width: 100%;
+  background: linear-gradient(to right, #ddd , #bbb);
 }
