--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,8 @@ h1 {
 
 .logo {
   margin-left: -1.5vw;
-  margin-right: 47vw;
-  width: 150px;
+  margin-right: calc( 57vw - 250px );
+  min-width: 250px;
   font-family: "Kosugi Maru", regular;
   font-size: 30px;
   opacity: 1;
