--- a/src/ContactForm.css
+++ b/src/ContactForm.css
@@ -12,12 +12,12 @@
   margin: 0 auto;
   border-radius: 2px;
   box-shadow: 2px 2px 12px 1px #bbbbbb;
+  height: 76vh;
 }
 
 .form-header {
   width: 71vw;
   margin: 0 auto;
-  margin-bottom: 40px;
   letter-spacing: 5px;
   font-family: 'Lato', sans-serif;
   font-weight: 400;
@@ -25,7 +25,7 @@
 
 #form {
   width: 500px;
-  margin: 50px auto 100px auto;
+  margin: 23px auto 100px auto;
 }
 
 input {
