--- a/src/Issues.css
+++ b/src/Issues.css
@@ -51,12 +51,15 @@
 .about-issue1 {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-around;
+  align-content: center;
 }
 
 .about-issue2 {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  align-content: center;
   padding-right: 30px;
   background-color: #dddddd;
 }
@@ -69,6 +72,8 @@
 .about-issue3 {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .about-issue3 img {
