--- a/src/Issues.css
+++ b/src/Issues.css
@@ -51,8 +51,16 @@
 .about-issue1 {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  align-content: center;
+}
+
+.about-issue1 h2 {
+  margin-top: 11.25vh;
+  margin-left: 6vw;
+}
+
+.about-issue1-p-container {
+  margin-top: 9vh;
+  margin-left: 10vw;
 }
 
 .about-issue2 {
@@ -98,13 +106,26 @@
   padding-left: 3%;
 }
 
+.about-tile p {
+  margin: 5px;
+}
+
+.issue3-list {
+  margin-top: 10vh;
+  margin-left: -2vw;
+}
+
+.about-issues3-h2 {
+  margin-top: 12vh;
+  margin-left: -2vw;
+}
+
 .sadFace {
   flex-grow: 1;
   height: 155%;
   display: flex;
-
-  align-items: center;
-  justify-content: center;
+  margin-left: 15.5vw;
+  margin-top: 6.5vh;
 }
 
 .sadFace img {
